--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   cached_network_image: ^2.2.0+1
   material_design_icons_flutter: ^4.0.5345
+  flutter_search_bar: ^2.1.0
   
 dev_dependencies:
   flutter_test:
