--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.flutter_archfolio">
    <application
+        android:usesCleartextTraffic="true"
         android:label="flutter_archfolio"
         android:icon="@mipmap/ic_launcher">
         <activity
