--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   cached_network_image: ^2.2.0+1
   material_design_icons_flutter: ^4.0.5345
   flutter_search_bar: ^2.1.0
+  http: ^0.13.2
+  shared_preferences: ^2.0.5
   
 dev_dependencies:
   flutter_test:
