--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_search_bar: ^2.1.0
   http: ^0.13.2
   shared_preferences: ^2.0.5
+  flutter_staggered_grid_view: ^0.4.0
   
 dev_dependencies:
   flutter_test:
