--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   http: ^0.13.2
   shared_preferences: ^2.0.5
   flutter_staggered_grid_view: ^0.4.0
+  image_size_getter: ^1.0.0
   
 dev_dependencies:
   flutter_test:
