--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   shared_preferences: ^2.0.5
   flutter_staggered_grid_view: ^0.4.0
   image_size_getter: ^1.0.0
+  image_picker: ^0.7.5+3
   
 dev_dependencies:
   flutter_test:
