--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,15 @@ dependencies:
   flutter_staggered_grid_view: ^0.4.0
   image_size_getter: ^1.0.0
   image_picker: ^0.7.5+3
+  dio: ^4.0.0
+  custom_refresh_indicator: ^1.0.0
   
 dev_dependencies:
+  integration_test:
+    sdk: flutter
   flutter_test:
     sdk: flutter
+  test: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
