--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   image_picker: ^0.7.5+3
   dio: ^4.0.0
   custom_refresh_indicator: ^1.0.0
+  image_picker_for_web: ^2.0.0
   
 dev_dependencies:
   integration_test:
@@ -51,6 +52,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  assets:
+    - assets/avatar_placeholder.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
